--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,19 +1,189 @@
-* {
-  font-family: Helvetica, Arial, sans-serif;
+body {
+  margin: 0px;
+  display: block;
 }
 
-
-h1 {
-  color: SeaGreen;
+header {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid black;
+  background-color: white;
+  font-family: Verdana;
+  font-size: 14px;
+  font-weight: bold;
+  top: 0px;
 }
 
-
-p,
-li {
-  font-size: 18px;
+.logo {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding-left: 30px;
 }
 
+.logo img {
+  width: 70px;
+  height: 60px;
+  margin-right: 12px;
+}
+
+.logo span {
+    color: MediumAquamarine;
+}
+
+header nav {
+  padding-right: 40px;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
 
 a {
+  color: black;
+  text-decoration: underline;
+}
+
+.content {
+  font-family: Georgia;
+  position: relative;
+  top: 80px;
+  margin: 40px auto;
+  width: 1230px;
+}
+
+.container {
+  display: flex;
+  flex-shrink: 0;
+}
+
+.column {
+  flex-direction: column;
+}
+
+.margin {
+  margin-right: 30px;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
+}
+
+.image {
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.image span {
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+
+.img_main span {
+  font-size: 40px;
+}
+
+p {
+  font-size: 17px;
+  color: black;
+}
+
+.img_main {
+  background-image: url(https://raw.githubusercontent.com/Generian/MyTimesCodecademy/master/resources/images/img-story-main.png);
+}
+
+.img_sub1 {
+  background-image: url(https://raw.githubusercontent.com/Generian/MyTimesCodecademy/master/resources/images/img-story-2.png);
+}
+
+.img_sub2 {
+  background-image: url(https://raw.githubusercontent.com/Generian/MyTimesCodecademy/master/resources/images/img-story-3.png);
+}
+
+.img_col2 {
+  background-image: url(https://raw.githubusercontent.com/Generian/MyTimesCodecademy/master/resources/images/img-story-1.png);
+}
+
+.img_cookie {
+  background-image: url(https://raw.githubusercontent.com/Generian/MyTimesCodecademy/master/resources/images/img-news-bite.png);
+  height: 242px;
+  width: 242px;
+}
+
+h2  {
+  margin: 0px;
+}
+
+h3 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.news_bites div {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+  align-items: center;
+  display: flex;
+}
+
+.news_bites div a {
   text-decoration: none;
+  color: DimGray;
+  font-size: 12px;
+  padding: 11px 20px;
+}
+
+footer {
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 325px;
+  width: 100%;
+  position: relative;
+  top: 80px;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer_logo {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: 2px solid white;
+  padding-right: 20px;
+  margin-right: 30px;
+}
+
+.footer_line {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
